swagger dog attribute renamed
